@@ -11,9 +11,6 @@ eLogClubLog::eLogClubLog() : QObject(0)
     email = QString();
     pass = QString();
     api = "9467beee93377e82a276b0a777d388b5c933d044";
-   // manager = new QNetworkAccessManager();
-    //QObject::connect(&manager, SIGNAL(finished(QNetworkReply*)),this, SLOT(downloadFinished(QNetworkReply*)));
-
 }
 
 eLogClubLog::~eLogClubLog()
@@ -35,7 +32,7 @@ eLogClubLog::~eLogClubLog()
         const QByteArray sdata = data->readAll();
 
         qDebug() << sdata;
-        qDebug() << "eLogClubLog::downloadFinished: and CTY file created!" << endl;
+
         emit actionReturnDownload(result);
     }
     else if (result == QNetworkReply::HostNotFoundError)
@@ -87,17 +84,16 @@ void eLogClubLog::slotErrorManagement(QNetworkReply::NetworkError networkError)
 int eLogClubLog::sendQSO(const QStringList _qso)
 {
     qDebug() << "eLogClubLog::sendQSO: " << call <<"/"<< email << "/" << pass << "/" << api  << endl;
+    qDebug() << "eLogClubLog::sendQSO:: length = " << QString::number(_qso.length()) << endl;
+    if (_qso.length()!=16)
+    {
+        return -1;
+    }
     QString qso = getClubLogAdif(_qso);
     qDebug() << "eLogClubLog::sendQSO: " << qso << endl;
+    return sendData(qso);
 
-    //target = "https://secure.clublog.org/realtime.php";
-    //QUrl url = QUrl::fromEncoded(this->target.toLocal8Bit());
-
-
-    //QNetworkRequest request(url);
-    //request.setHeader(QNetworkRequest::ContentTypeHeader, "application/x-www-form-urlencoded");
-   // reply = manager.get(request);
-/*******************/
+    /*
     QUrl serviceUrl = QUrl("https://secure.clublog.org/realtime.php");
     QByteArray postData;
 
@@ -120,13 +116,46 @@ int eLogClubLog::sendQSO(const QStringList _qso)
     connect(networkManager, SIGNAL(finished(QNetworkReply*)), this, SLOT(downloadFinished(QNetworkReply*)));
 
     networkManager->post(request, postData);
+*/
+    //qDebug() << "eLogClubLog::sendQSO (result): " << QString::number(result) << endl;
+   // return result;
+}
+
+
+int eLogClubLog::sendData(const QString _q)
+{
+    qDebug() << "eLogClubLog::sendData: " << _q<< endl;
+
+    QUrl serviceUrl = QUrl("https://secure.clublog.org/realtime.php");
+    QByteArray postData;
+
+    //QByteArray postData;
+
+    QUrl params;
+    params.addQueryItem("email",email);
+    params.addQueryItem("password",pass);
+    params.addQueryItem("callsign",call);
+    params.addQueryItem("api",api);
+    params.addQueryItem("adif",_q);
+
+    postData = params.encodedQuery();
+
+    // Call the webservice
+    QNetworkAccessManager *networkManager = new QNetworkAccessManager(this);
+
+    QNetworkRequest request(serviceUrl);
+    request.setHeader(QNetworkRequest::ContentTypeHeader, "application/x-www-form-urlencoded");
+    connect(networkManager, SIGNAL(finished(QNetworkReply*)), this, SLOT(downloadFinished(QNetworkReply*)));
+
+    networkManager->post(request, postData);
 
     return -1;
+
 }
 
 QString eLogClubLog::getClubLogAdif(const QStringList _q)
 {
-    qDebug() << "eLogClubLog::getCLubLogAdif" << endl;
+    qDebug() << "eLogClubLog::getClubLogAdif: " << QString::number(_q.length()) << endl;
     // _qso must include 16 ordered fields than can be empty or contain data. This function builds the ADIF QSO
 /* http://clublog.freshdesk.com/support/solutions/articles/53202-which-adif-fields-does-club-log-use-
 ClubLog only accepts the following ADIF fields:
@@ -147,6 +176,10 @@ ClubLog only accepts the following ADIF fields:
   •PROP_MODE
   •CREDIT_GRANTED
 */
+    if (_q.length()!=16)
+    {
+        return QString();
+    }
 
     QString qso, aux1;
     qso.clear();
@@ -158,26 +191,44 @@ ClubLog only accepts the following ADIF fields:
         qso = "<QSO_DATE:" + QString::number(aux1.length()) + ">" +  aux1  +  " ";
     }
 
-
+qDebug() << "eLogClubLog::getClubLogAdif: 1"  << endl;
 
     //qso = "<QSO_DATE:" + QString::number((_q.at(0)).length()) + ">" + _q.at(0) + " ";
     qso = qso + "<TIME_ON:" + QString::number((_q.at(1)).length()) + ">" + _q.at(1) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 10"  << endl;
     qso = qso + "<QSLRDATE:" + QString::number((_q.at(2)).length()) + ">" + _q.at(2) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 20"  << endl;
     qso = qso + "<QSLSDATE:" + QString::number((_q.at(3)).length()) + ">" + _q.at(3) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 30"  << endl;
     qso = qso + "<CALL:" + QString::number((_q.at(4)).length()) + ">" + _q.at(4) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 40"  << endl;
     qso = qso + "<OPERATOR:" + QString::number((_q.at(5)).length()) + ">" + _q.at(5) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 50"  << endl;
     qso = qso + "<MODE:" + QString::number((_q.at(6)).length()) + ">" + _q.at(6) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 60"  << endl;
     qso = qso + "<BAND:" + QString::number((_q.at(7)).length()) + ">" + _q.at(7) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 70"  << endl;
     qso = qso + "<BAND_RX:" + QString::number((_q.at(8)).length()) + ">" + _q.at(8) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 80"  << endl;
     qso = qso + "<FREQ:" + QString::number((_q.at(9)).length()) + ">" + _q.at(9) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 90"  << endl;
     qso = qso + "<QSL_RCVD:" + QString::number((_q.at(10)).length()) + ">" + _q.at(10) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 100"  << endl;
     qso = qso + "<LOTW_QSL_RCVD:" + QString::number((_q.at(11)).length()) + ">" + _q.at(11) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 110"  << endl;
     qso = qso + "<QSL_SENT:" + QString::number((_q.at(12)).length()) + ">" + _q.at(12) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 120"  << endl;
     qso = qso + "<DXCC:" + QString::number((_q.at(13)).length()) + ">" + _q.at(13) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 130'"  << endl;
     qso = qso + "<PROP_MODE:" + QString::number((_q.at(14)).length()) + ">" + _q.at(14) + " ";
+qDebug() << "eLogClubLog::getClubLogAdif: 140"  << endl;
     qso = qso + "<CREDIT_GRANTED:" + QString::number((_q.at(15)).length()) + ">" + _q.at(15) + " ";
+    qDebug() << "eLogClubLog::getClubLogAdif: 150"  << endl;
     qso = qso + "<EOR>";
     //qDebug() << "eLogClubLog::getCLubLogAdif - QSO: "  << qso << endl;
+
+
+    qDebug() << "eLogClubLog::getClubLogAdif: 100"  << endl;
     return qso;
 }
 
@@ -190,3 +241,23 @@ void eLogClubLog::setCredentials(const QString _call, const QString _email, cons
 
 }
 
+
+int eLogClubLog::deleteQSO(const QStringList _qso)
+{
+    qDebug() << "eLogClubLog::deleteQSO: length = " << QString::number(_qso.length()) << endl;
+    if (_qso.length()!=16)
+    {
+        return -1;
+    }
+
+//http://clublog.freshdesk.com/support/solutions/articles/54908-using-adif-to-update-or-delete-qsos
+//<CALL:5>VP9NO<QSO_DATE:8>20070903<TIME_ON:6>213300<BAND:3>30M<MODE:2>CW<QSLCALL:5>GH6UW<EOR>
+
+    QString replaceCall = "<QSLCALL:" + QString::number(call.length()) + ">" + call + " " + "<EOR>";
+
+    QString qso = getClubLogAdif(_qso);
+    qso.replace("<EOR>", replaceCall);
+
+    return sendData(qso);
+
+}
